- pngwolf-zopli 1.1.0 - https://github.com/jibsen/pngwolf-zopfli
- rehuff - http://wiki.xiph.org/Rehuff
- Tidy 5.1.14 - http://tidy.sourceforge.net
- TruePNG 0.6.2.2 - http://x128.ho.ua/pngutils.html
- UPX 3.91 - http://upx.sourceforge.net
- ZLib 1.2.8 - http://www.zlib.net
- zRecompress 2.12 - http://nikkhokkho.sourceforge.net/static.php?page=zRecompress


X.XX - YYYY/MM/DD
- Added INI option ShutdownWhenDone=false to specify the OS to shutdown as soon as optimization of all queued files is done (guindos98).
- Improved single instance detection, because it did not work properly on Vista and later (Special).
- Switched back to Windows theme if Windows 10 theme has been selected, because it causes issues with TaskDialogs in Windows 10 Anniversary (RejZoR).
- Made abort optimization message more clearer (Louis Horvath).
- Fixed main window position not properly restored on launch (hairycactus).
- Simplified ECT multithreading, because it already knows the number of threads to use.
- Retested in Windows XP RTM, and Windows 10 Anniversary.
- Updated help file.
- Updated Leanify to 0.4.3.149 daily binaries.
- Updated to ECT 0.6.2.0 -ef70e0- x86 and x64 optimized builds (thanks Malloc Voidstar).
- Changed from pngwolf to pngwolf-zopfli, which gives higher rations, and a native x64 build (TPS).
- Updated to cppcheck 1.75.
- Some minor optimizations and code cleanup.


8.50 - 2016/08/01
- Made interface fully HDPI aware. Now it reescales according to Windows scaling (@Zeyckler).
- Added smpdf to the PDF toolchain (necros, maadjordan).
- Added OLE and OBJ files detection by content.
- Added optional GIF lossy recompression by adding Gifsicle Lossy (thanks to jibz for the binaries).
- Added INI setting GIFAllowLossy=false to enable lossy GIF optimizations (maadjordan).
- Added ECT multithreading support to make it faster with more than one core/CPU, and improve ratio with --allfilters.
- Improved UPX compresion adding --nrv2d --crp-ms=999999.
- Improved ECT compression.